Fixed cursor on small windows

--- a/static/custom.css
+++ b/static/custom.css
@@ -97,6 +97,7 @@ body {
 	}
 	.jumbotron img {
 	max-height: none;
+	cursor: auto;
 	}
 
 	#page-title {
